[project]
name = "MBU_Respekt_For_Graenser_Notify_When_Down"
version = "0.0.4"
description = "A bot that notifies when Respekt For Graenser journalizing fails."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client @ git+https://github.com/odense-rpa/automation-server-client.git",
    "mbu-dev-shared-components>=3.0.0",
    "mbu-rpa-core",
    "sqlalchemy",
    "pyodbc",
]

[tool.uv.sources]
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", tag = "v0.2.0" }

[tool.setuptools]
py-modules = []
