[project]
name = "MBU_Respekt_For_Graenser_Notify_When_Down"
version = "1.0.0"
description = "A bot that notifies when Respekt For Graenser journalizing fails."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client @ git+https://github.com/odense-rpa/automation-server-client.git",
    "mbu-dev-shared-components==4.0.3",
    "mbu-rpa-core",
    "sqlalchemy",
    "pyodbc",
    "pillow",
]

[tool.uv.sources]
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", tag = "v0.2.0" }

[tool.setuptools]
py-modules = []

[tool.ruff]
ignore = ["E501", "E251"]
target-version = "py313"
select = [
  "F",    # Pyflakes
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "I",    # isort (import sorting)
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "DTZ",  # enforce timezone-aware datetimes
  "SIM",  # flake8-simplify
  "PL",   # pylint (subset)
]

exclude = [
  ".git",
  ".venv",
  "venv",
  "__pycache__",
  "build",
  "dist",
  "uv.lock",
  ".env",
]

[tool.ruff.lint.isort]
# Keep imports tidy and deterministic
# known-first-party = ["your_package_name"]  # <- replace with your top-level package

# Optional: if you want Ruff to auto-fix on dev machines:
# ruff check --fix .

[tool.ruff.format]
# Use the formatter; CI step already checks it with `ruff format --check .`
